src/Adyma/MainBundle/Resources/public/css/main.css
/* ... */
@media (max-height: 600px){
    .indexfirstview img {
    width: 30%;
    padding-top: 15px;
    }
    .indexfirstview h3 {
    bottom: 22px;
    }
    .menunavtrigger{
        padding: 21px 0px;
        text-align: center !important;
        height: 40px;
        background: black;
        margin: 0;
        left: 0;
        right: 0;
        border: none;
        color: #fff;
        font-weight: bolder;
        text-transform: uppercase;
        font-family: 'Montserrat';
        font-size: 1.6em;
        display: block;
        border-bottom:3px solid white;
    }
    nav ul {
        margin: 0 auto;
        list-style-type: none;
        max-width: 860px;
        background: black;
        width:100%;
        padding:0;
    }
    nav ul li {
        padding-top: 10px;
        padding-bottom: 10px;
        margin:0;
        padding-left: 7px;
        border-top: 1px solid white;
        border-left:none;
        width:97%;
        float:none;
    }
    nav ul li a {
        font-size:0.7em;
    }
    .headcontent h3{
        font-size: 1.7em;
        top: 17px;
    }
    .menunavtrigger{
        padding-top: 5px;
        padding-bottom: 5px;
        height: 30px;
    }
    #expand{
       height:0;
       overflow:hidden;
    }
    .navliesp{
        height:1.7em;
        width:97%;
    }
    .two{
        padding-left: 20%;
        border-right:none;
        width:300px;
    }
    .two:hover{
        background:none;
    }
    .submenul {
        width: 320px;
        margin-bottom: -9px;
        margin:0;
    }
    .navlisub{
        left:0;
        border-right: none;
        width:98px;
    }

}
@media (min-width: 300px) and (orientation:portrait){
    .indexfirstview{
        background-position: 35%;
    }
    .knowadyma{
        height:160px;
    }
    .indexfirstview img {
        width: 55%;
        padding-top: 50px;
    }
    .menunavtrigger{
        padding: 21px 0px;
        text-align: center !important;
        height: 40px;
        background: black;
        margin: 0;
        left: 0;
        right: 0;
        border: none;
        color: #fff;
        font-weight: bolder;
        text-transform: uppercase;
        font-family: 'Montserrat';
        font-size: 1.6em;
        display: block;
        border-bottom:3px solid white;
    }
    nav ul {
        margin: 0 auto;
        list-style-type: none;
        max-width: 860px;
        background: black;
        width:100%;
        padding:0;
    }
    nav ul li {
        padding-top: 10px;
        padding-bottom: 10px;
        margin:0;
        padding-left: 7px;
        border-top: 1px solid white;
        border-left:none;
        width:97%;
        float:none;
    }
    nav ul li a {
        font-size:0.7em;
    }
    .headcontent h3{
        font-size: 1.7em;
        top: 17px;
    }
    .menunavtrigger{
        padding-top: 5px;
        padding-bottom: 5px;
        height: 30px;
    }
    #expand{
       height:0;
       overflow:hidden;
    }
    .navliesp{
        height:1.7em;
        width:97%;
    }
    .two{
        padding-left: 20%;
        border-right:none;
        width:300px;
    }
    .two:hover{
        background:none;
    }
    .submenul {
        width: 320px;
        margin-bottom: -9px;
        margin:0;
    }
    .navlisub{
        left:0;
        border-right: none;
        width:98px;
    }
    .headcontent{
        height:200px;
        position:relative;
    }
    .headcontent img{
        width:170%;
    }
    .headcontent h3{
        top:12%;
    }
    .headcontent p{
        top:65%;
    }
    .indexfirstview h3{
        bottom: 125px;
    }
    .teaminfo{
        margin: 25px 0px 25px 0px;
    }
    .pleft{
        display:block;
        vertical-align: top;
        width: 100%;
        margin-right: 0;
        margin-left: 0;
    }
    .pright{
        background: #bfbfbf;
        display:inline-block;
        margin-left: 0;
        width: 100%;
    }
    .undercontent{
        margin-top:56%;
        padding-top: 0%;
    }
    .undercontent p {
        font-size: 13px;
        padding-bottom: 20px;
        padding:0;
    }
    footer{
        height:45px;
    }
}
@media (min-width:1500px){
    .teamcontainer{
        max-width: 1200px;
        margin: 0 auto;
    }
}
@media (min-width:1700px){
    .undercontent {
        margin-top: 21%;
        padding-top: 2%;
        background: white;
    }
}

